--- a/src/main/resources/floodlightdefault.properties
+++ b/src/main/resources/floodlightdefault.properties
@@ -15,8 +15,9 @@ net.floodlightcontroller.counter.CounterStore,\
 net.floodlightcontroller.debugcounter.DebugCounter,\
 net.floodlightcontroller.perfmon.PktInProcessingTime,\
 net.floodlightcontroller.ui.web.StaticWebRoutable,\
-net.floodlightcontroller.loadbalancer.LoadBalancer, \
-net.floodlightcontroller.switchoverflow.SwitchOverflowTest
+net.floodlightcontroller.loadbalancer.LoadBalancer,\
+net.floodlightcontroller.switchoverflow.SwitchOverflowTest,\
+net.floodlightcontroller.cli.Cli
 net.floodlightcontroller.restserver.RestApiServer.port = 8080
 net.floodlightcontroller.core.FloodlightProvider.openflowport = 6633
 net.floodlightcontroller.jython.JythonDebugInterface.port = 6655
