Lots of file additions. Work done on Altair.

--- a/src/main/resources/floodlightdefault.properties
+++ b/src/main/resources/floodlightdefault.properties
@@ -17,7 +17,8 @@ net.floodlightcontroller.perfmon.PktInProcessingTime,\
 net.floodlightcontroller.ui.web.StaticWebRoutable,\
 net.floodlightcontroller.loadbalancer.LoadBalancer,\
 net.floodlightcontroller.switchoverflow.SwitchOverflowTest,\
-net.floodlightcontroller.cli.Cli
+net.floodlightcontroller.cli.Cli, \
+net.floodlightcontroller.headerextract.HeaderExtract
 net.floodlightcontroller.restserver.RestApiServer.port = 8080
 net.floodlightcontroller.core.FloodlightProvider.openflowport = 6633
 net.floodlightcontroller.jython.JythonDebugInterface.port = 6655
